[package]
name = "string_art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltae = "0.3.2"
getopts = "0.2.21"
image = "0.24.6"
json = "0.12.4"
lab = "0.11.0"
linfa-clustering = "0.6.1"
rand = "0.8.5"
time = "0.3.25"
